--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 .primary-footer {
-  background-color: #000;
+  background-color: $off-black;
   color: white;
   min-height: 100px;
   position: relative;
