--- a/sass/_lightbox.scss
+++ b/sass/_lightbox.scss
@@ -7,14 +7,14 @@
   font-size: 33pt;
 
     .fa {
-      color: #000;
+      color: $off-black;
       font-size: 40pt;
       margin-right: 10px;
     }
   }
 
   .fa {
-    color: #000;
+    color: $off-black;
     font-size: 20pt;
   }
 
