--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -1,5 +1,5 @@
 .profile-box {
-  color: #FFF;
+  color: $off-white;
   background-color: #444;
   border-radius: 10px;
   overflow: hidden;
@@ -40,7 +40,7 @@
 }
 
 .user-hero {
-  background: radial-gradient(rgba(35, 35, 35, 0.15), rgba(35, 35, 35, 0.15)), url('../images/crowd2blur.jpg');
+  background: radial-gradient(rgba(35, 35, 35, 0.33), rgba(35, 35, 35, 0.33)), url('../images/crowd2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -171,6 +171,14 @@
 
       &:hover {
         background-color: #9393A9;
+      }
+    }
+
+    &.delete {
+      background-color: #D00606;
+
+      &:hover {
+        background-color: #A10505;
       }
     }
   }
