--- a/sass/_search.scss
+++ b/sass/_search.scss
@@ -1,5 +1,5 @@
 #map {
-  color: #000;
+  color: $off-black;
   width: 100%;
   height: 600px;
   margin: 0 auto;
@@ -68,7 +68,7 @@
   }
 
   button {
-    color: #FFF;
+    color: $off-white;
     width: 200px;
     padding: 9px;
     @extend %content-box-button;  
