Add user creation

--- a/sass/_defaults.scss
+++ b/sass/_defaults.scss
@@ -1,7 +1,7 @@
 $base-color: #50A2E5;
 $base-color-dark: #4091d2;
 $off-black: #1B1B1B;
-$off-white: #ECECEC;
+$off-white: #FBFBFB;
 
 html {
   box-sizing: border-box;
