--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ th {
 html {
   box-sizing: border-box;
   font: 12pt Exo, 'Open Sans', Arial;
-  color: #ECECEC; }
+  color: #FBFBFB; }
 
 *, *::before, *::after {
   box-sizing: inherit;
@@ -2408,9 +2408,9 @@ h4, h2 {
   Components and Helpers
 *****************************************/
 button, a.btn {
-  color: #ECECEC;
+  color: #FBFBFB;
   background-color: transparent;
-  border: 1px solid #ECECEC;
+  border: 1px solid #FBFBFB;
   padding: 1em;
   border-radius: 4px; }
 
@@ -2421,7 +2421,7 @@ a.btn {
 .login-box, .signup-box, .search-box {
   width: 340px;
   min-height: 450px;
-  background-color: #ECECEC;
+  background-color: #FBFBFB;
   color: #1B1B1B;
   border-radius: 4px;
   position: absolute;
@@ -2450,7 +2450,7 @@ a.btn {
   .primary-header.dark {
     background-color: #1B1B1B; }
   .primary-header .fa {
-    color: #ECECEC;
+    color: #FBFBFB;
     font-size: 4.5em;
     position: absolute;
     top: 15px;
@@ -2466,7 +2466,7 @@ a.btn {
     .primary-header .primary-nav a.btn:last-child {
       -webkit-transition: all 0.2s; }
       .primary-header .primary-nav a.btn:last-child:hover {
-        background-color: #ECECEC;
+        background-color: #FBFBFB;
         color: #444; }
     .primary-header .primary-nav .btn {
       padding: 15px 25px; }
@@ -2496,11 +2496,11 @@ div.background {
   right: 0;
   top: 110px; }
   .banner h1 {
-    color: #ECECEC;
+    color: #FBFBFB;
     font-size: 4.5em;
     margin: 0; }
   .banner p {
-    color: #ECECEC;
+    color: #FBFBFB;
     font-size: 1.4em;
     display: block;
     width: 420px;
@@ -2510,7 +2510,7 @@ div.background {
     padding: 20px 40px;
     transition: all 0.2s; }
     .banner a.btn:hover {
-      background-color: #ECECEC;
+      background-color: #FBFBFB;
       color: #444; }
 
 .primary-footer {
@@ -2555,6 +2555,10 @@ div.background {
   font-size: 11pt; }
 
 .signup-box {
+  overflow: hidden;
+  position: static;
+  transform: none;
+  margin: 10px auto;
   width: 800px;
   min-height: 460px; }
   .signup-box h1 {
@@ -2569,6 +2573,20 @@ div.background {
     margin-left: 80px; }
   .signup-box select {
     width: 235px; }
+
+.signup-right-column .form-object input {
+  padding: 6px 4px; }
+
+.description-container {
+  text-align: center; }
+
+.profile-description {
+  border: 1px solid #C0C0C0;
+  background-color: #FBFBFB;
+  margin-top: 20px;
+  width: 400px;
+  height: 100px;
+  font-size: 12pt; }
 
 .form-divider {
   overflow: hidden; }
@@ -2591,12 +2609,13 @@ div.background {
   .form-object > :first-child {
     margin: 7px 5px 0 20px; }
   .form-object input {
+    background-color: #FBFBFB;
     outline: none;
     border: 1px solid #C0C0C0;
     border-radius: 4px;
     width: 235px;
-    padding: 8px 4px;
-    font-size: 10pt;
+    padding: 10px 4px;
+    font-size: 11pt;
     transition: all 0.3s; }
     .form-object input:focus {
       border: 1px solid #50A2E5; }
@@ -2646,12 +2665,12 @@ div.background {
   .search-box select {
     width: 170px; }
   .search-box button, .search-box a.btn {
-    color: #ECECEC;
+    color: #FBFBFB;
     width: 200px;
     padding: 9px; }
 
 .profile-box {
-  color: #ECECEC;
+  color: #FBFBFB;
   background-color: #444;
   border-radius: 10px;
   overflow: hidden;
