--- a/sass/_lightbox.scss
+++ b/sass/_lightbox.scss
@@ -38,7 +38,6 @@
 }
 
 .signup-box {
-  overflow: hidden;
   position: static;
   transform: none;
   margin: 10px auto;
@@ -46,7 +45,7 @@
   min-height: 460px;
 
   h1 {
-    width: 220px;
+    width: 240px;
     margin: 30px auto 12px auto;
   }
 
@@ -79,10 +78,16 @@
 .profile-description {
   border: 1px solid #C0C0C0;
   background-color: $off-white;
+  border-radius: 4px;
+  outline: none;
   margin-top: 20px;
   width: 400px;
   height: 100px;
   font-size: 12pt;
+
+  &:focus {
+    border: 1px solid $base-color;
+  }
 }
 
 .form-divider {
