Bare bones functionality complete

--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -14,7 +14,7 @@
 .button-options {
   text-align: center;
 
-  a.btn {
+  a.btn, button {
     width: 40%;
     margin: 0 20px 20px 20px;
     padding: 6px 20px;
@@ -173,7 +173,7 @@
     border-radius: 4px;
   }
 
-  a.btn {
+  a.btn, button {
     @extend %content-box-button;
     width: 150px;
     padding: 5px 25px;
@@ -192,6 +192,10 @@
       &:hover {
         background-color: #A10505;
       }
+    }
+
+    &.disabled {
+      background-color: #B4B4B4;
     }
   }
 }
@@ -240,7 +244,7 @@ $height-hover: 160px;
   text-align: center;
   transition: all 0.4s;
 
-  a.btn {
+  a.btn, button {
     padding: 2px 5px;
     color: #FFF;
     font-size: 10pt;
@@ -286,4 +290,8 @@ $height-hover: 160px;
 
 .member-tile:hover .text-wrapper {
   opacity: 1;
+}
+
+.edit > h1 {
+  width: 230px;
 }
