--- a/css/main.css
+++ b/css/main.css
@@ -2430,7 +2430,7 @@ a.btn {
   left: 50%;
   transform: translate(-50%, -50%); }
 
-.login-box button, .login-box a.btn, .signup-box button, .signup-box a.btn, .search-box button, .search-box a.btn, .band-profile a.btn {
+.login-box button, .login-box a.btn, .signup-box button, .signup-box a.btn, .search-box button, .search-box a.btn, .band-profile a.btn, .band-profile button {
   background-color: #50A2E5;
   display: block;
   width: 237px;
@@ -2438,7 +2438,7 @@ a.btn {
   margin: 17px auto;
   text-align: center;
   border: none; }
-  .login-box button:hover, .login-box a.btn:hover, .signup-box button:hover, .signup-box a.btn:hover, .search-box button:hover, .search-box a.btn:hover, .band-profile a.btn:hover {
+  .login-box button:hover, .login-box a.btn:hover, .signup-box button:hover, .signup-box a.btn:hover, .search-box button:hover, .search-box a.btn:hover, .band-profile a.btn:hover, .band-profile button:hover {
     background-color: #4091d2; }
 
 /****************************************
@@ -2685,19 +2685,19 @@ div.background {
 
 .button-options {
   text-align: center; }
-  .button-options a.btn {
+  .button-options a.btn, .button-options button, .button-options a.btn {
     width: 40%;
     margin: 0 20px 20px 20px;
     padding: 6px 20px;
     text-align: center;
     border: none; }
-    .button-options a.btn:first-child {
+    .button-options a.btn:first-child, .button-options button:first-child, .button-options a.btn:first-child {
       background-color: #50A2E5; }
-      .button-options a.btn:first-child:hover {
+      .button-options a.btn:first-child:hover, .button-options button:first-child:hover, .button-options a.btn:first-child:hover {
         background-color: #4091d2; }
-    .button-options a.btn.alternate {
+    .button-options a.btn.alternate, .button-options button.alternate, .button-options a.alternate.btn {
       background-color: #A9A9C2; }
-      .button-options a.btn.alternate:hover {
+      .button-options a.btn.alternate:hover, .button-options button.alternate:hover, .button-options a.alternate.btn:hover {
         background-color: #9393A9; }
 
 .user-hero {
@@ -2800,17 +2800,19 @@ div.background {
     height: 230px;
     border: 3px solid #000;
     border-radius: 4px; }
-  .band-profile a.btn {
+  .band-profile a.btn, .band-profile button, .band-profile a.btn {
     width: 150px;
     padding: 5px 25px; }
-    .band-profile a.btn.alternate {
+    .band-profile a.btn.alternate, .band-profile button.alternate, .band-profile a.alternate.btn {
       background-color: #A9A9C2; }
-      .band-profile a.btn.alternate:hover {
+      .band-profile a.btn.alternate:hover, .band-profile button.alternate:hover, .band-profile a.alternate.btn:hover {
         background-color: #9393A9; }
-    .band-profile a.btn.delete {
+    .band-profile a.btn.delete, .band-profile button.delete, .band-profile a.delete.btn {
       background-color: #D00606; }
-      .band-profile a.btn.delete:hover {
+      .band-profile a.btn.delete:hover, .band-profile button.delete:hover, .band-profile a.delete.btn:hover {
         background-color: #A10505; }
+    .band-profile a.btn.disabled, .band-profile button.disabled, .band-profile a.disabled.btn {
+      background-color: #B4B4B4; }
 
 .band-members {
   width: 510px;
@@ -2844,13 +2846,13 @@ div.background {
   background: rgba(35, 35, 35, 0.8);
   text-align: center;
   transition: all 0.4s; }
-  .text-wrapper a.btn {
+  .text-wrapper a.btn, .text-wrapper button, .text-wrapper a.btn {
     padding: 2px 5px;
     color: #FFF;
     font-size: 10pt;
     width: 70px;
     transition: all 0.2s; }
-    .text-wrapper a.btn:hover {
+    .text-wrapper a.btn:hover, .text-wrapper button:hover, .text-wrapper a.btn:hover {
       background-color: #FFF;
       color: #444; }
   .text-wrapper button.delete, .text-wrapper a.delete.btn {
@@ -2879,3 +2881,6 @@ div.background {
 
 .member-tile:hover .text-wrapper {
   opacity: 1; }
+
+.edit > h1 {
+  width: 230px; }
