--- a/css/main.css
+++ b/css/main.css
@@ -2723,12 +2723,11 @@ div.background {
     padding: 9px; }
 
 .profile-box {
-  color: #FBFBFB;
-  background-color: #444;
-  border-radius: 10px;
-  overflow: hidden;
-  margin: 40px auto;
-  width: 50%; }
+  background: radial-gradient(rgba(3, 74, 134, 0.6), rgba(3, 74, 134, 0.6)), url("../images/profile-bg-blur.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 220px; }
   .profile-box b {
     color: #4091d2; }
 
@@ -2750,10 +2749,6 @@ div.background {
         background-color: #9393A9; }
 
 .user-hero {
-  background: radial-gradient(rgba(35, 35, 35, 0.33), rgba(35, 35, 35, 0.33)), url("../images/crowd2.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
   min-height: 220px;
   position: relative; }
   .user-hero img {
