--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -1,10 +1,9 @@
 .profile-box {
-  color: $off-white;
-  background-color: #444;
-  border-radius: 10px;
-  overflow: hidden;
-  margin: 40px auto;
-  width: 50%;
+  background: radial-gradient(rgba(3, 74, 134, 0.6), rgba(3, 74, 134, 0.6)), url('../images/profile-bg-blur.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 220px;
 
   b {
     color: $base-color-dark;
@@ -40,10 +39,6 @@
 }
 
 .user-hero {
-  background: radial-gradient(rgba(35, 35, 35, 0.33), rgba(35, 35, 35, 0.33)), url('../images/crowd2.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
   min-height: 220px;
   position: relative;
 
