--- a/sass/_defaults.scss
+++ b/sass/_defaults.scss
@@ -1,5 +1,5 @@
-$base-color: #50A2E5;
-$base-color-dark: #4091d2;
+$base-color: #4C9FD2;
+$base-color-dark: #4188B3;
 $off-black: #1B1B1B;
 $off-white: #FBFBFB;
 
