--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,36 +1,38 @@
 div.background {
   background-color: #A5A5A5;
-  min-height: 580px;
+  min-height: 590px;
   position: relative;
   overflow: hidden;
 
   > div {
     position: relative;
     min-height: 480px;
+    @media screen and (min-width: 1400px) {
+      min-height: 82vh;
+    }
   }
 
   &.wallpaper {
-    background-image: radial-gradient(rgba(35, 35, 35, 0.3), rgba(35, 35, 35, 0.3)), url('../images/bg3.jpg');
+    background-image: radial-gradient(rgba(35, 35, 35, 0.3), rgba(35, 35, 35, 0.3)), url('../images/homebg2.jpeg');
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   &.lightbox {
-    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/bg3.jpg');
+    background: radial-gradient(rgba(35, 35, 35, 0.8), rgba(35, 35, 35, 0.8)), url('../images/homebg2.jpeg');
     background-size: cover;
-  }
-
-  .profile-box {
-    min-height: 300px;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 }
 
 .banner {
   position: absolute;
   text-align: center;
-  min-height: 170px;
-  left: 0;
-  right: 0;
-  top: 110px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -70%);
 
   h1 {
     color: $off-white;
