--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -5,17 +5,21 @@
   background-position: center center;
   min-height: 220px;
   color: rgba(251, 251, 251, 0.75);
+  overflow: hidden;
 
   p {
     margin: 0;
   }
 }
 
+$profile-width: 50vw;
+
 .button-options {
   text-align: center;
+  padding: 20px;
 
   a.btn, button {
-    width: 40%;
+    width: 150px;
     margin: 0 20px 20px 20px;
     padding: 6px 20px;
     text-align: center;
@@ -36,10 +40,24 @@
         background-color: #9393A9;
       }
     }
+
+    &.logout {
+      background-color: #5F886F;
+
+      &:hover {
+        background-color: #466753;
+      }
+    }
+
+    &.delete {
+      background-color: #BA1E1E;
+
+      &:hover {
+        background-color: #9B1A1A;
+      }
+    }
   }
 }
-
-$profile-width: 50vw;
 
 .user-profile {
   width: $profile-width;
@@ -55,8 +73,8 @@ $profile-width: 50vw;
 
 .profile-picture {
   display: inline-block;
-  width: 190px;
-  height: 190px;
+  width: 200px;
+  height: 200px;
   border: 3px solid rgba(251, 251, 251, 0.2);
   border-radius: 50%;
 }
@@ -122,13 +140,24 @@ $profile-width: 50vw;
 
   h4 {
     margin-bottom: 10px; 
-    text-align: center;
     font-size: 18pt;
   }
 
   p {
     font-family: Arial;
     font-size: 14pt;
+    line-height: 140%;
+  }
+}
+
+.ownership {
+  text-align: center;
+  padding: 20px;
+  border-bottom: 1px solid rgba(251, 251, 251, 0.5);
+
+  h4 {
+    margin-bottom: 15px;
+    font-size: 18pt;
   }
 }
 
@@ -201,11 +230,14 @@ $height-hover: 160px;
   display: inline-block;
   position: relative;
   visibility: visible;
+  margin: 0 20px;
 
   img {
     width: $width-hover;
     height: $height-hover;
     display: block;
+    border-radius: 50%;
+    border: 3px solid rgba(251, 251, 251, 0.2);
   }
 }
 
@@ -218,6 +250,7 @@ $height-hover: 160px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 50%;
   background: rgba(35, 35, 35, 0.8);
   text-align: center;
   transition: all 0.4s;
@@ -237,14 +270,14 @@ $height-hover: 160px;
 
   button.delete {
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: 36px;
-    padding: 2px 5px;
     border-color: #FF0000;
     color: #FF0000;
     font-size: 9pt;
     width: 100px;
     transition: all 0.2s;
+    font-size: 8pt;
 
     &:hover {
       background-color: #FF0000;
